Basic styling (VERY BASIC)

--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <title>Expense Tracker</title>
     <script defer src="app.js"></script>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    
 </head>
 <body>
     <h1>Track your Purchases</h1>
     <div id="top-cont">
         <input type="text" id="item-input" placeholder="Object or Company">
-        <input type="text" id="cost-input"placeholder="$">
+        <input type="text" id="cost-input"placeholder="Cost $">
         <input type="date" id="date-input">
         <button id="save-info-btn">Add</button>
     </div>
