--- a/VanillaJS-projects/FactQuiz/index.html
+++ b/VanillaJS-projects/FactQuiz/index.html
@@ -6,45 +6,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Facts quiz</title>
     <script defer src="facts.js"></script>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 <body>
+    <h1>Random Fact Quiz</h1>
     <div id="quiz-wrapper">
-        <span id="score">5/5</span>
-        <span id="q-1">
+        <div id="score-wrap"><span id="score">5/5</span></div>
+        <div id="q-1">
             <h2>Question 1</h2>
             <h3>What's the name of the medical condition that causes people to develope a foreign accent?</h3>
             <div id="1-1"><p>Frenchy Flu</p></div>
             <div id="1-2"><p>Insomnia</p></div>
-            <div id="1-3"><p>Foreign Accent Syndrome -</p></div> 
-        </span>
-        <span id="q-2">
+            <div id="1-3"><p>Foreign Accent Syndrome</p></div> 
+        </div>
+        <div id="q-2">
             <h2>Question 2</h2>
             <h3>What does the word "noisome" mean?</h3>
             <div id="2-1"><p>Being loud</p></div>
-            <div id="2-2"><p>Smell bad -</p></div> 
+            <div id="2-2"><p>Smell bad</p></div> 
             <div id="2-3"><p>Being cool</p></div>
-        </span>
-        <span id="q-3">
+        </div>
+        <div id="q-3">
             <h2>Question 3</h2>
             <h3>Which state are you most likley to live the longest?</h3>
             <div id="3-1"><p>Newyork</p></div>
             <div id="3-2"><p>Oregon</p></div>
-            <div id="3-3"><p>Hawaii -</p></div> 
-        </span>
-        <span id="q-4">
+            <div id="3-3"><p>Hawaii</p></div> 
+        </div>
+        <div id="q-4">
             <h2>Question 4</h2>
             <h3>What is the national animal of Scotland?</h3>
-            <div id="4-1"><p>Unicorn -</p></div> 
+            <div id="4-1"><p>Unicorn</p></div> 
             <div id="4-2"><p>Rabbit</p></div>
             <div id="4-3"><p>Turtle</p></div>
-        </span>
-        <span id="q-5">
+        </div>
+        <div id="q-5">
             <h2>Question 5</h2>
             <h3>What's the most sold musical instrument?</h3>
             <div id="5-1"><p>Guitar</p></div>
             <div id="5-2"><p>Drum</p></div>
-            <div id="5-3"><p>Harmonica -</p></div> 
-        </span>
+            <div id="5-3"><p>Harmonica</p></div> 
+        </div>
 
 
     </div>
