Image Slider Controls with auto slide

--- a/VanillaJS-projects/ImageSliderWControl/index.html
+++ b/VanillaJS-projects/ImageSliderWControl/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
     <img id="slide" width="400" height="200" >
+    <div id="btns">
     <div id="left">&larr;</div>
     <div id="right">&rarr;</div>
+    </div>
 </body>
 </html>
