--- a/FetchAPI-projects/QrCodeGen/index.html
+++ b/FetchAPI-projects/QrCodeGen/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Qr Code gen</title>
+    <title>Qr Code Generator</title>
     <script defer src="qrgen.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -14,7 +14,7 @@
     <h4>Enter any website link or just plain text</h4>
 </div>
     <div id="form-cont">
-    <input type="text" name="" id="user-qr-text">
+    <input type="text" placeholder="Website link or Text" id="user-qr-text">
     <input type="submit" id="subBtn">
     </div>
     <div id="imgHolder"></div>
